[package]
name = "frostblink"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility providing hotkey support and more for Path of Exile."
repository = "https://github.com/robertwayne/frostblink"
publish = false

[dependencies]
inputbot = { git = "https://github.com/robertwayne/InputBot", branch = "dev" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
egui_wgpu_backend = "0.17"
pollster = "0.2"
egui = "0.17"
epi = "0.17"
wgpu = "0.12"
winit = "0.26"
egui-winit = { version = "0.17", features = ["clipboard", "copypasta"] }
anyhow = "1"
copypasta = "0.7"

[target.'cfg(target_os="linux")'.dependencies]
xcb = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
