[package]
name = "frostblink"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility providing hotkey support and more for Path of Exile."
repository = "https://github.com/robertwayne/frostblink"
publish = false

[dependencies]
inputbot = { path = "../InputBot" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
egui = "0.18"
egui-wgpu = "0.18"
eframe = { version = "0.18", features = ["persistence"] }
winit = { version = "0.27" }
egui-winit = { version = "0.18", features = ["clipboard"] }
anyhow = "1"
copypasta = "0.8"

[target.'cfg(target_os="linux")'.dependencies]
xcb = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
